# cfd-harness-unified

./: .gitignore  .gitmessage  .importlinter  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  run_notion_hub_sync.py
.claude/agents/: kogami-claude-cosplay.md
.github/workflows/: ci.yml  plane_guard_rollback_cron.yml  sampling_audit_reminder.yml
.governance/: README.md  backfill_log.jsonl
.planning/: PHASE0_CONTEXT_PACK.md  PROJECT.md  ROADMAP.md  STATE.md  d4_plus_rules.yaml  external_gate_queue.md  phase5_audit_package_builder_kickoff.md  workbench_rollout_summary.md
.planning/adwm/: 2026-04-18_activation_plan.md
.planning/audit_evidence/: 2026-04-26_v61_080_a4_flake_attribution.txt  2026-04-26_v61_080_diff_attestation.txt  2026-04-26_v61_080_v2_authority_gate_verdict.md
.planning/case_profiles/: backward_facing_step.yaml  circular_cylinder_wake.yaml  differential_heated_cavity.yaml  duct_flow.yaml  impinging_jet.yaml  lid_driven_cavity.yaml  naca0012_airfoil.yaml  plane_channel_flow.yaml  rayleigh_benard_convection.yaml  turbulent_flat_plate.yaml
.planning/decisions/: 2026-04-18_adwm_activation.md  2026-04-18_ex1_008_fuse.md  2026-04-18_ex1_008_self_approve.md  2026-04-18_ex1_009_self_approve.md  2026-04-18_ex1_010_self_approve.md  2026-04-18_ex1_g3_self_approve.md  2026-04-20_a_class_metadata.md  2026-04-20_b_class_gold_remediation.md  2026-04-20_c3_result_harvest.md  2026-04-20_c3a_ldc_gold_anchored.md  2026-04-20_c3b_naca_surfaces.md  2026-04-20_c3c_impinging_jet.md  2026-04-20_c_class_c1_c2.md  2026-04-20_path_b_ui_mvp.md  2026-04-20_phase_1_to_4_mvp.md  2026-04-20_q2_r_a_relabel_path_a.md  2026-04-20_v61_cutover.md  2026-04-21_phase5_5a_manifest_builder.md  2026-04-21_phase5_5b_serialize.md  2026-04-21_phase5_5c1_codex_fixes.md  2026-04-21_phase5_5c2_m3_mitigation.md  2026-04-21_phase5_5c3_warning_class.md  2026-04-21_phase5_5c_hmac_sign.md  2026-04-21_phase5_5d1_codex_followup.md  2026-04-21_phase5_5d_screen6_ui.md  2026-04-21_phase5b_ldc_simplefoam_migration.md  2026-04-21_phase5b_q5_ldc_gold_closure.md  2026-04-21_phase6_foam_adapter_docker_dep.md  2026-04-21_phase6_l3_build_fingerprint_rename.md  2026-04-21_phase6_td001_bfs_reattachment.md  2026-04-21_phase6_td002_duct_flow_dispatch.md  2026-04-21_phase6_td024_learn_teaching_runs.md  2026-04-21_phase6_td025_learn_full_coverage.md  2026-04-21_phase6_td026_learn_mesh_slider.md  2026-04-21_phase6_td027_learn_full_depth.md  2026-04-21_phase6_td028_q4_bfs_closure.md  2026-04-21_phase7a_field_capture.md  2026-04-21_phase7bc_render_and_report.md  2026-04-21_phase7bde_polish_gci_l4.md  2026-04-21_phase7c_tier_c_visual_only_fanout.md  (+72 more)
.planning/dogfood/: 2026-05-09_review_template.md  M5.0_import_v0.md  M_AI_COPILOT_v0.md  M_RENDER_API_v0.md  M_VIZ_v0.md  anchor_02_cylinder_closeout.md  anchor_03_naca_closeout.md  anchor_04_run_compare_api_closeout.md  dogfood_close_review_template.md  session_2026-04-27_followups.md
.planning/gates/: 2026-04-26_w2_g9_opus_4_7_gate_review.md  Q-2_r_a_relabel.md  Q-new_whitelist_remediation.md
.planning/governance/: claude_version_baseline.txt
.planning/handoffs/: 2026-04-20_claude_code_kickoff.md  2026-04-20_claude_code_mid_session_stop.md  2026-04-21_new_session_kickoff.md  2026-04-21_session_end_kickoff.md
.planning/intake/: DEC-V61-053_circular_cylinder_wake.yaml  DEC-V61-057_differential_heated_cavity.yaml  DEC-V61-058_naca0012_airfoil.yaml  TEMPLATE.yaml  (+15 more)
config/: foam_agent_config.yaml  notion_config.yaml
docs/: c3_sampling_strategy_design.md  product_thesis.md  ui_design.md  ui_roadmap.md  whitelist_audit.md
knowledge/: attestor_thresholds.yaml  skill_index.yaml  whitelist.yaml
orchestrator/: __init__.py  skill_loader.py
reports/: EVIDENCE_RELEASES.md
scripts/: check_codex_cadence.py  check_track_isolation.py  check_track_isolation_msg.py  dec_v61_058_live_runs.py  dec_v61_061_live_runs.py  dec_v61_062_live_runs.py  dec_v61_063_live_runs.py  dec_v61_064_live_runs.py  gen_importlinter.py  gen_skill_index.py  generate_contract_dashboard.py  generate_reports.py  generate_visual_acceptance_report.py  p2_acceptance_run.py  phase5_audit_run.py  plane_guard_rollback_eval.py  populate_ldc_v_centerline_post_hoc.py  preflight_case_visual.py  render_case_report.py  start-ui-dev.sh  validate_gold_standards.py
src/: __init__.py  _plane_assignment.py  _plane_guard.py  airfoil_extractors.py  airfoil_surface_sampler.py  bfs_extractors.py  comparator_gates.py  convergence_attestor.py  correction_recorder.py  cylinder_centerline_extractor.py  cylinder_strouhal_fft.py  dhc_extractors.py  duct_flow_extractors.py  error_attributor.py  flat_plate_extractors.py  foam_agent_adapter.py  impinging_jet_extractors.py  knowledge_db.py  models.py  notion_client.py  plane_channel_extractors.py  plane_channel_uplus_emitter.py  rbc_extractors.py  result_comparator.py  task_runner.py  wall_gradient.py
templates/: case_report.md.j2
tests/: conftest.py  test_airfoil_surface_sampler.py  test_bfs_alias_parity.py  test_bfs_extractors.py  test_codex_cadence_hook.py  test_comparator_gates_g2.py  test_correction_recorder.py  test_cylinder_centerline_extractor.py  test_cylinder_strouhal_fft.py  test_dec042_extractor_integration.py  test_dhc_extractors.py  test_duct_flow_alias_parity.py  test_duct_flow_extractors.py  test_e2e_mock.py  test_error_attributor.py  test_flat_plate_alias_parity.py  test_flat_plate_extractors.py  test_foam_agent_adapter.py  test_foam_agent_adapter_run_report.py  test_gen_importlinter.py  test_impinging_jet_extractors.py  test_knowledge_db.py  test_models.py  test_notion_client.py  test_plane_assignment.py  test_plane_assignment_ssot.py  test_plane_channel_alias_parity.py  test_plane_channel_extractors.py  test_plane_channel_uplus_emitter.py  test_plane_guard.py  test_plane_guard_edge.py  test_plane_guard_escape.py  test_plane_guard_observability.py  test_preflight_multi_scalar.py  test_rbc_extractors.py  test_result_comparator.py  test_task_runner.py  test_task_runner_executor_mode.py  test_task_runner_trust_gate.py  test_trust_gate_source_origin.py  (+1 more)
(+1148 files in other folders)
