[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["auto_verifier*", "report_engine*", "audit_package*", "notion_sync*", "orchestrator*"]

[project]
name = "cfd-harness-unified"
version = "0.1.0"
description = "统一 AI-CFD 知识编译器：Foam-Agent 执行引擎 + Notion 控制面"
# Python 3.12 is the only supported runtime. UI backend and several tests use
# 3.10+ typing syntax (`X | Y`, `list[T]`); dropping the fake 3.9 support keeps
# the contract honest with the `.venv` we actually ship in `./scripts/start-ui-dev.sh`.
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "notion-client>=2.2.1",
    # Runtime deps for line B case-analysis pipeline (had been implicit
    # imports causing 40 consecutive CI failures pre-2026-04-25T20:30):
    #   - numpy: src/cylinder_centerline_extractor.py + many extractors
    #   - jinja2: src/report_engine/generator.py
    # See RETRO-V61-006 dogfood-window critical-path fix (commit body).
    "numpy>=1.26",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    # Required by scripts/validate_gold_standards.py and
    # tests/test_gold_standard_schema/. Previously an implicit dep — pytest
    # collection failed with ModuleNotFoundError on fresh venvs.
    "jsonschema>=4.0",
    # Four-plane architecture static enforcement (ADR-001).
    # Lints `.importlinter` contract on pre-commit + CI.
    "import-linter>=2.0",
]
ui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "httpx>=0.27",   # used by fastapi.testclient
]
cfd-real-solver = [
    # FoamAgentExecutor requires the Docker SDK to drive the cfd-openfoam
    # container. Previously this dependency was implicit — the adapter
    # guarded on `_DOCKER_AVAILABLE` but emitted a misleading error pointing
    # at Foam-Agent instead of the missing Python package. Declared here as
    # an optional group so MOCK-mode unit tests stay lean and the real-
    # solver path has a documented install command.
    # Install: `.venv/bin/pip install -e '.[cfd-real-solver]'`
    "docker>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
