[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["auto_verifier*", "report_engine*", "audit_package*", "notion_sync*", "orchestrator*"]

[project]
name = "cfd-harness-unified"
version = "0.1.0"
description = "统一 AI-CFD 知识编译器：Foam-Agent 执行引擎 + Notion 控制面"
# Python 3.12 is the only supported runtime. UI backend and several tests use
# 3.10+ typing syntax (`X | Y`, `list[T]`); dropping the fake 3.9 support keeps
# the contract honest with the `.venv` we actually ship in `./scripts/start-ui-dev.sh`.
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "notion-client>=2.2.1",
    # Runtime deps for line B case-analysis pipeline (had been implicit
    # imports causing 40 consecutive CI failures pre-2026-04-25T20:30):
    #   - numpy: src/cylinder_centerline_extractor.py + many extractors
    #   - jinja2: src/report_engine/generator.py
    # See RETRO-V61-006 dogfood-window critical-path fix (commit body).
    # numpy floor is 1.26 (first release with Python 3.12 support per
    # NumPy 1.26.0 release notes; matches requires-python = ">=3.12").
    # jinja2 floor is 3.1.6 not 3.1.0 — Codex audit on commit 0208929
    # (R1 LOW) flagged that 3.1.0-3.1.5 admit versions with published
    # security advisories (GHSA-gmj6-6f8f-6699, GHSA-cpwx-vrp4-4pq7).
    # Repo code uses regular Environment, not SandboxedEnvironment, so
    # no immediate exploit path; this floor encodes the security
    # baseline rather than the functional minimum (3.1.0 had StrictUndefined
    # already).
    "numpy>=1.26",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    # Required by scripts/validate_gold_standards.py and
    # tests/test_gold_standard_schema/. Previously an implicit dep — pytest
    # collection failed with ModuleNotFoundError on fresh venvs.
    "jsonschema>=4.0",
    # Four-plane architecture static enforcement (ADR-001).
    # Lints `.importlinter` contract on pre-commit + CI.
    "import-linter>=2.0",
]
ui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "httpx>=0.27",   # used by fastapi.testclient
]
cfd-real-solver = [
    # FoamAgentExecutor requires the Docker SDK to drive the cfd-openfoam
    # container. Previously this dependency was implicit — the adapter
    # guarded on `_DOCKER_AVAILABLE` but emitted a misleading error pointing
    # at Foam-Agent instead of the missing Python package. Declared here as
    # an optional group so MOCK-mode unit tests stay lean and the real-
    # solver path has a documented install command.
    # Install: `.venv/bin/pip install -e '.[cfd-real-solver]'`
    "docker>=7.0",
]
workbench = [
    # M5 STL case import (geometry_ingest + case_scaffold). trimesh is the
    # canonical loader: watertight check, bbox, named-solid extraction,
    # canonical re-serialization. Optional because non-workbench install
    # paths (CI line-B, foam_agent_adapter) don't need it.
    # scipy is a transitive requirement of trimesh.body_count (connected-
    # components graph analysis) — explicit-pin it so the multi-shell
    # health check does not silently degrade.
    # python-multipart is required by FastAPI's File/UploadFile in the
    # POST /api/import/stl route — no other route in the app uses
    # multipart, so the dep stays scoped to this extras group.
    # Install: `.venv/bin/pip install -e '.[workbench]'`
    "trimesh>=4.0",
    "scipy>=1.13",
    "python-multipart>=0.0.9",
    # M6.0 gmsh-based unstructured meshing path. Pinned to the 4.11/4.12
    # series — 4.13 has not been validated against the macOS arm64
    # universal wheel + the OpenFOAM-10 `gmshToFoam` reader format. Bump
    # the upper bound only after a real-mesh smoke run on both Linux and
    # macOS arm64. See spec_v2 D4 + Kogami M6 finding 4.
    "gmsh>=4.11,<4.13",
    # M6.0 also drives gmshToFoam inside the cfd-openfoam container.
    # The docker SDK is *also* declared by [ui] but listing it here
    # makes the `.[workbench]`-only install path runnable end-to-end
    # without a hidden cross-extras dependency.
    "docker>=7.0",
    # Phase-1A (DEC-V61-097): server-rendered visualization PNGs for
    # Steps 3-5 (bc-overlay, residual-history, velocity-slice). Pillow
    # stays for the lightweight overlays (bc-overlay) where matplotlib
    # is overkill.
    # 2026-04-30 dogfood feedback: matplotlib added to the workbench
    # dep tree (~50 MB) so Step 5 can show research-grade multi-panel
    # reports — tricontourf + streamplot + multi-data layouts — in
    # parity with scripts/render_case_report.py. The original Pillow-
    # only design capped Step 5 at "single |U| midplane PNG + text
    # stats", which the user flagged as far below the line-B pipeline.
    "Pillow>=10.0",
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
